--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "save": "^2.4.0",
     "webpack": "^4.19.1"
   },
   "devDependencies": {
